# swytchcode-agent-sdk-py

./: .gitignore  LICENSE.md  README.md  py-runtime.patch  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
scripts/: bump_version.py
swytchcode_runtime/: __init__.py  cli.py  client.py  discover.py  exec.py  manage.py  schema.py
swytchcode_runtime/providers/: __init__.py  anthropic.py  base.py  crewai.py  langgraph.py  openai_agents.py  vercel.py
tests/: test_alias.py  test_schema_routing.py
